--- a/testcode/simplemux_test/Makefile
+++ b/testcode/simplemux_test/Makefile
@@ -8,6 +8,6 @@ CFLAGS=-g -O3
 
 $(TARGET):
 	verilator -Wno-fatal -I$(RTLSRC)/ --cc $(TOPMODULE).v --trace --exe ../$(@).cpp -CFLAGS "$(CFLAGS)"
-	make -C obj_dir -f V$(TOPMODULE).mk
+	make -j8 -C obj_dir -f V$(TOPMODULE).mk
 clean:: 
 	rm -rf obj_dir
